# python-starter

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
python-starter/: hello.py
