[project]
name = "python-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "art>=6.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pyre>=1.12.5",
]